examples/readme_validation/syntax_cases/fail/fail_missing_end.dsl
@name: "语法负例-缺少end"
value = 1
if ${value} == 1 do
    [打印], 内容: "missing end"
